--- a/public/index.html
+++ b/public/index.html
@@ -241,16 +241,16 @@
       <h1 class="title">Track Your Bus in Real-Time</h1>
 
       <div class="input-group">
-        <input type="text" class="input-field" placeholder="Enter Starting Point">
+        <input type="text" id="start-field" placeholder="Enter Starting Point">
         <div class="location-icon">📍</div>
       </div>
 
       <div class="input-group"> 
-        <input type="text" class="input-field" placeholder="Enter Ending Point">
+        <input type="text" id="end-field" placeholder="Enter Ending Point">
         <div class="location-icon">📍</div>
       </div>
 
-      <button class="find-btn">Find my bus</button>
+      <button id="search-btn" class="find-btn">Find my bus</button>
 
 
       <p class="subtitle">Track buses live and never miss your ride again!</p>
